variables.RunFour.scala.error
Erreur de compilation :
RunFour:1: error: not found: value biscuitPasse
biscuitPasse = 0
^RunFour:2: error: not found: value biscuitPasse
while (biscuitPasse != 4)
       ^RunFour:7: error: not found: value biscuitPasse
    biscuitPasse += 1
    ^