variables.RunFour.scala.code
biscuitPasse = 0
while (biscuitPasse != 4)
{
  avance()
  if (estSurBiscuit())
  {
    biscuitPasse += 1
  }
}